# Normalise-Paired-Regions

./: Cargo.toml  README.md  normalize_paired_regions
example/: regions.txt
src/: main.rs
