[package]
name = "normalize_paired_regions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# regex = "1.10.3"
# openssl = { version = "0.10", features = ["vendored"] }
rust-htslib = "0.46.0"
rand = { version = "0.8.5" } #, features = ["choose_multiple"] }
clap = "4.5.17"
